[package]
name = "testanything"
version = "0.2.1"
authors = ["Jonathan E. Magen <jonathan.magen@cigna.com>"]
edition = "2018"
description = "Generate results in the Test Anything Protocol (TAP)"
license = "Apache-2.0"
homepage = "https://github.com/cigna/tap-rust"
repository = "https://github.com/cigna/tap-rust"
readme = "README.md"

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
  "prepush-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-check"
]
