[package]
name = "testanything"
version = "0.3.1"
authors = ["Jonathan E. Magen <jonathan.magen@cigna.com>"]
edition = "2021"
description = "Generate results in the Test Anything Protocol (TAP)"
license = "Apache-2.0"
homepage = "https://github.com/cigna/tap-rust"
repository = "https://github.com/cigna/tap-rust"
readme = "README.md"

[dependencies]
