[package]
name = "testanything"
version = "0.4.0"
authors = ["Jonathan E. Magen <jonathan.magen@cigna.com>"]
edition = "2021"
description = "Generate results in the Test Anything Protocol (TAP)"
license = "Apache-2.0"
homepage = "https://github.com/cigna/tap-rust"
repository = "https://github.com/cigna/tap-rust"
readme = "README.md"

[dependencies]

[features]
default = ["std"]

# Provide all features. Requires a dependency on the Rust standard library.
std = []

# Provide everything except printing to stdout. Uses `alloc`, which is a subset
# of std but may be enabled without depending on all of std.
alloc = []
